# electron-sys

./: Cargo.toml  README.md  aliases.js  package-lock.json  package.json  search-index.js  settings.html  source-files.js
.ci/assets/docs/: index.html
.github/workflows/: ci.yml  main.yml
electron_sys/: all.html  fn.get_system_idle_state.html  fn.get_system_idle_time.html  fn.quantity.html  fn.segment_style.html  fn.segments.html  fn.selected_index.html  fn.set_quantity.html  fn.set_segment_style.html  fn.set_segments.html  fn.set_selected_index.html  index.html  sidebar-items.js  static.app.html  static.clipboard.html  static.content_tracing.html  static.context_bridge.html  static.crash_reporter.html  static.desktop_capturer.html  static.dialog.html  static.global_shortcut.html  static.in_app_purchase.html  static.ipc_main.html  static.ipc_renderer.html  static.native_image.html  static.native_theme.html  static.net.html  static.net_log.html  static.power_monitor.html  static.power_save_blocker.html  static.process.html  static.protocol.html  static.remote.html  static.screen.html  static.session.html  static.shell.html  static.system_preferences.html  static.web_frame.html  struct.Accelerator.html  struct.AddRepresentationOptions.html  (+197 more)
electron_sys/class/accelerator/: struct.Accelerator.html
electron_sys/class/browser_view/: struct.BrowserView.html
electron_sys/class/browser_window/: struct.BrowserWindow.html
electron_sys/class/browser_window_proxy/: struct.BrowserWindowProxy.html
electron_sys/class/client_request/: struct.ClientRequest.html
examples/activity-monitor/: README.md  index.html  index.js  package-lock.json  package.json  preload.js  tsconfig.json  webpack.config.ts
examples/activity-monitor/crates/app-main/: Cargo.toml
examples/activity-monitor/crates/app-main/src/: lib.rs
examples/electron-tray/: README.md  package-lock.json  package.json
examples/hash/: README.md  index.html  index.js  package-lock.json  package.json  preload.js  styles.css
examples/hash/crates/app-renderer/: Cargo.toml
examples/hash/crates/app-renderer/src/: lib.rs
examples/mirror/: README.md  package-lock.json  package.json
examples/prices/: README.md  package-lock.json  package.json
examples/quick-start/: README.md  index.html  index.js  package-lock.json  package.json
examples/quick-start-dodrio/: README.md  index.html  package-lock.json  package.json
examples/quick-start-dodrio/crates/app-main/: Cargo.toml
examples/quick-start-dodrio/crates/app-main/src/: lib.rs
examples/quick-start-dodrio/crates/app-renderer/: Cargo.toml
examples/quick-start-dodrio/crates/app-renderer/src/: error.rs  lib.rs
examples/quick-start/crates/app-main/: Cargo.toml
examples/quick-start/crates/app-main/src/: lib.rs
examples/quick-start/crates/app-renderer/: Cargo.toml
examples/quick-start/crates/app-renderer/src/: lib.rs
examples/url/: README.md  package-lock.json  package.json
examples/url/crates/app-main/: Cargo.toml
examples/url/crates/app-main/src/: lib.rs
src/: app.rs  browser_window.rs  clipboard.rs  context_bridge.rs  crash_reporter.rs  desktop_capturer.rs  event_emitter.rs  ipc_renderer.rs  lib.rs  native_theme.rs  net.rs  net_log.rs  process.rs  remote.rs  shell.rs  system_preferences.rs  web_frame.rs
src/class/: accelerator.rs  browser_view.rs  browser_window.rs  browser_window_proxy.rs  client_request.rs  command_line.rs  cookies.rs  debugger.rs  dock.rs  download_item.rs  incoming_message.rs  menu.rs  menu_item.rs  mod.rs  native_image.rs  notification.rs  session.rs  touch_bar.rs  touch_bar_button.rs  touch_bar_color_picker.rs  touch_bar_group.rs  touch_bar_label.rs  touch_bar_popover.rs  touch_bar_scrubber.rs  touch_bar_segmented_control.rs  touch_bar_slider.rs  touch_bar_spacer.rs  tray.rs  web_contents.rs  web_request.rs
src/electron_sys/: lib.rs.html
src/interface/: add_representation_options.rs  animation_settings.rs  app_details_options.rs  auto_resize_options.rs  blink_memory_info.rs  bluetooth_device.rs  browser_view_options.rs  browser_window_options.rs  certificate.rs  certificate_principal.rs  certificate_trust_dialog_options.rs  clear_storage_data_options.rs  client_request_options.rs  command_line.rs  cookie.rs  cookies_get_filter.rs  cookies_set_details.rs  cpu_usage.rs  crash_report.rs  crash_reporter_start_options.rs  create_from_bitmap_options.rs  create_from_buffer_options.rs  create_interrupted_download_options.rs  custom_scheme.rs  data.rs  default_font_family.rs  desktop_capturer_source.rs  display.rs  display_balloon_options.rs  dpi.rs  enable_device_emulation_options.rs  enable_network_emulation_options.rs  extension_info.rs  feed_url_options.rs  file_filter.rs  file_path_with_headers.rs  find_in_page_options.rs  from_partition_options.rs  get_file_icon_options.rs  get_login_item_settings.rs  (+110 more)
src/module/: app.rs  auto_updater.rs  browser_window.rs  clipboard.rs  content_tracing.rs  context_bridge.rs  crash_reporter.rs  desktop_capturer.rs  dialog.rs  global_shortcut.rs  in_app_purchase.rs  ipc_main.rs  ipc_renderer.rs  mod.rs  native_image.rs  native_theme.rs  net.rs  power_monitor.rs  power_save_blocker.rs  protocol.rs  remote.rs  screen.rs  session.rs  shell.rs  system_preferences.rs  web_contents.rs  web_frame.rs
src/object/: browser_window_options.rs  cpu_usage.rs  crash_report.rs  custom_scheme.rs  display.rs  dock.rs  feed_url_options.rs  file_filter.rs  get_login_item_settings_options.rs  global_event.rs  io_counters.rs  jump_list_item.rs  jump_list_settings.rs  keyboard_input_event.rs  memory_info.rs  menu.rs  mod.rs  mouse_input_event.rs  mouse_wheel_input_event.rs  native_image.rs  notification_object.rs  open_external_options.rs  point.rs  printer_info.rs  process_memory_info.rs  protocol_request.rs  protocol_response_upload_data.rs  rectangle.rs  referrer.rs  remove_password.rs  scrubber_item.rs  shortcut_details.rs  size.rs  sources_options.rs  stream_protocol_response.rs  thumbar_button.rs  trace_categories_and_options.rs  upload_data.rs  upload_file.rs  upload_raw_data.rs  (+3 more)
tests/: callable.rs  node.rs
(+473 files in other folders)
