[package]
edition = "2018"
name = "electron-sys"
version = "0.2.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/interfaces-rs/electron-sys"
description = """
Raw bindings to the Electron API for projects using wasm-bindgen.
"""

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[profile.dev]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'

[dependencies.node-sys]
git = "https://github.com/interfaces-rs/node-sys"

[dependencies.js-sys]
version = "^0.3.32"
features = []

[dependencies.wasm-bindgen]
version = "^0.2.55"
features = ["strict-macro"]

[dependencies.web-sys]
version = "^0.3.32"
features = [
  "Event",
]

[dev-dependencies]
wasm-bindgen-test = { version = "=0.3.5" }

[workspace]
members = [
  "examples/electron-tray/crates/app-main",
  "examples/hash/crates/app-main",
  "examples/hash/crates/app-renderer",
  "examples/quick-start/crates/app-main",
  "examples/quick-start/crates/app-renderer",
  "examples/url/crates/app-main",
]
