[package]
edition = "2018"
name = "electron-sys"
version = "0.4.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/interfaces-rs/electron-sys"
description = """
Raw bindings to the Electron API for projects using wasm-bindgen.
"""

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[profile.dev]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'

[features]
default = ["wee_alloc"]

[dependencies]
js-sys = "^0.3.39"
node-sys = "^0.4.2"

[dependencies.wasm-bindgen]
version = "^0.2.62"
features = ["strict-macro"]

[dependencies.web-sys]
version = "^0.3.39"
features = [
  "Event",
]

[dependencies.wee_alloc]
version = "^0.4.5"
optional = true

[dev-dependencies]
wasm-bindgen-test = { version = "^0.3.12" }

[workspace]
members = [
  "examples/activity-monitor/crates/app-main",
  "examples/activity-monitor/crates/app-renderer",
  "examples/hash/crates/app-main",
  "examples/hash/crates/app-renderer",
  "examples/quick-start/crates/app-main",
  "examples/quick-start/crates/app-renderer",
  "examples/url/crates/app-main",
]
