[package]
publish = false
edition = "2018"
name = "hash-app-renderer"
version = "0.1.0"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[features]
default = ["wee_alloc"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "^0.3.32"

[dependencies.node-sys]
git = "https://github.com/interfaces-rs/node-sys"

[dependencies.wasm-bindgen]
version = "^0.2.55"
features = ["strict-macro"]

[dependencies.web-sys]
version = "^0.3.32"
features = [
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlInputElement',
  'Window',
]

[dependencies.wee_alloc]
version = "^0.4.5"
optional = true

[dev-dependencies]
wasm-bindgen-test = { version = "=0.3.5" }
