[package]
publish = false
name = "quick-start-dodrio-app-main"
version = "0.1.0"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "^0.1.6"

[dependencies.electron-sys]
version = "^0.1.0"
path = "../../../.."

[dependencies.js-sys]
version = "^0.3.31"
features = []

[dependencies.wasm-bindgen]
version = "^0.2.54"
features = ["strict-macro"]
