[package]
publish = false
name = "quick-start-dodrio-app-renderer"
version = "0.1.0"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "^0.1.6"
failure = "^0.1.5"

[dependencies.dodrio]
git = "https://github.com/fitzgen/dodrio"
rev = "0a993e9758a0ed24a741fc22fff68854bef38ae1"

[dependencies.wasm-bindgen]
version = "^0.2.54"
features = ["strict-macro"]

[dependencies.web-sys]
version = "^0.3.31"
features = [
  "Document",
  "HtmlElement",
  "Node",
  "Window",
]
