[package]
publish = false
edition = "2018"
name = "quick-start-app-main"
version = "0.1.0"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[dependencies]
console_error_panic_hook = "^0.1.6"

[dependencies.electron-sys]
version = "^0.2.0"
path = "../../../.."

[dependencies.js-sys]
version = "^0.3.31"
features = []

[dependencies.wasm-bindgen]
version = "^0.2.54"
features = ["strict-macro"]

[dev-dependencies]
wasm-bindgen-test = { version = "=0.3.4" }
