[package]
publish = false
edition = "2018"
name = "quick-start-app-main"
version = "0.1.0"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib"]
doctest = false
test = false

[features]
default = ["wee_alloc"]

[dependencies.electron-sys]
version = "^0.4.0"
path = "../../../.."

[dependencies]
console_error_panic_hook = "^0.1.6"
js-sys = "^0.3.39"

[dependencies.wasm-bindgen]
version = "^0.2.62"
features = ["strict-macro"]

[dependencies.wee_alloc]
version = "^0.4.5"
optional = true

[dev-dependencies]
wasm-bindgen-test = { version = "^0.3.12" }
