[package]
publish = false
name = "quick-start-app-renderer"
version = "0.1.0"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[dependencies]
console_error_panic_hook = "0.1.6"

[dependencies.wasm-bindgen]
version = "^0.2.54"
features = ["strict-macro"]

[dependencies.web-sys]
version = "^0.3.31"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = { version = "=0.3.4" }
